# docker-ctp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TESTING.md  VERSIONS.md  docker-ctp.sh  env.example.md  install.sh  project-overview.md  publish-docker-image.sh  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml
docker_ctp/: __init__.py  __main__.py  cli.py  config.py  docker_ops.py  exceptions.py  main.py  runner.py
docker_ctp/cli/: __init__.py
docker_ctp/config/: __init__.py
docker_ctp/core/: docker_ops.py  runner.py  service.py
docker_ctp/modules/: auth.py  build_context.py  cleanup.py  config_generation.py  dependency_checker.py  rebuild.py
docker_ctp/utils/: __init__.py  auth.py  build_context.py  cleanup.py  config_generation.py  dependency_checker.py  env.py  input_validation.py  logging_utils.py  rebuild.py
tests/: __init__.py  test_cli.py  test_config.py  test_docker_ctp.sh  test_logging_utils.py  test_service.py  test_smart_rebuild.sh  test_utils.py
to-do/: architectural-redesign.md  centralize-env-loading.md  code-quality-improvements.md  debug-cli-typeerror.md  debug-click-dest-error.md  debug-failing-tests.md  debug-linting-errors.md  debug-registry-authentication-hang.md  debug-test-failures.md  fix-pylint-cli.md  implement-missing-features.md  improve-docker-ctp-script.md  rich-migration.md
