[project]
name = "docker-ctp"
version = "0.3.0"
description = "It builds, tags and pushes Docker images to Docker Hub or the GitHubContainer Registry."
authors = [
    {name = "elvee", email = "lowie@beecave.nl"},
]
dependencies = [
    "click>=8.1.7",
    "halo>=0.0.31",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint-ruff = "ruff check ."
lint-black = "black . --check"
lint-pylint = "pylint docker_ctp"

[project.scripts]
docker-ctp = "docker_ctp.cli:main"

[tool.pdm.dev-dependencies]
# Linting and code-quality tools
lint = [
    "ruff>=0.1.0",
    "black>=23.12.0",
    "pylint>=3.0.3",
    "pydocstyle>=6.3.0",
]

# Testing dependencies
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]
