[project]
authors = [
    { name = "elvee", email = "lowie@beecave.nl" },
]
description = "It builds, tags and pushes Docker images to Docker Hub or the GitHubContainer Registry."
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
]
license = { text = "MIT" }
name = "docker-ctp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.5.0"

[project.scripts]
docker-ctp = "docker_ctp.cli:main"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest-cov>=5.0.0",
    "pytest>=8.2.2",
]

[tool.pdm.scripts]
lint-pylint = "pylint docker_ctp/ tests/"
lint-ruff = "ruff check docker_ctp/ tests/"
format-ruff = "ruff format --check docker_ctp/ tests/"

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
lint = [
    "mypy>=1.7.0",
    "pydocstyle>=6.3.0",
    "pylint>=3.0.3",
    "ruff>=0.1.0",
]
